# ia_task_2

./: Dockerfile  README.md  docker-compose.yml  launch.bash
ia_task_2_bringup/: CMakeLists.txt  README.md  package.xml
ia_task_2_bringup/config/: scenario_1.rviz
ia_task_2_bringup/launch/: case_r1.launch.py  case_r4.launch.py  scenario_1.launch.py  scenario_2.launch.py
ia_task_2_handlers/cube_handler/: CMakeLists.txt  Cargo.toml  package.xml
ia_task_2_handlers/cube_handler/src/: cube_handler.rs  cube_handler_test.rs
ia_task_2_scene/: README.md  package.xml  setup.cfg  setup.py
ia_task_2_scene/scenarios/scenario_2/: logitech_c270.json
