[package]
name = "tool_handler"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>", "Endre Erős <endree@chalmers.se>"]
edition = "2018"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.5.3" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "cube_handler"
path = "src/cube_handler.rs"

[[bin]]
name = "cube_handler_test"
path = "src/cube_handler_test.rs"